Now paginating camera roll items.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -39,6 +39,7 @@
 <!-- _files from events-mixin.js -->
 <file-list id="fileList"
            coll="[[coll]]"
+           data="[[_dbData]]"
            hide-dropzone="[[hideDropzone]]"
            files="[[_files]]">
 </file-list>
@@ -46,6 +47,7 @@
 <!-- _files from events-mixin.js -->
 <camera-roll id="cameraRoll"
              coll="[[coll]]"
+             data="[[_dbData]]"
              files="[[_files]]">
 </camera-roll>
 
