--- a/lists/file-list.html
+++ b/lists/file-list.html
@@ -17,7 +17,7 @@
 
 
   <multiselect-btns id="multi"
-                    items="[[_combinedFileItems]]" 
+                    data="[[data]]" 
                     slot="top-toolbar-buttons-slot"
                     on-all-changed="__allChanged"
                     on-hide-checkboxes-changed="__hideCheckboxesChanged">
