Pulled uploading logic out of upload-controls and added it to file-sources.  It was causing race conditions caused by being inside template repeaters which reuse and shuffle elements in unpredictable ways.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -24,6 +24,7 @@
 
 <file-sources id="sources"
               accept="[[accept]]"
+              coll="[[coll]]"
               data="[[_dbData]]"
               hide-dropzone="[[hideDropzone]]"
               list="[[list]]"
@@ -31,8 +32,9 @@
               maxsize="[[maxsize]]"
               multiple="[[multiple]]"
               unit="[[unit]]"
-              on-files-changed="__sourcesFilesChanged"
-              on-open-list="openList">
+              on-files-changed="__filesChanged"
+              on-open-list="openList"
+              on-upload-progress-updated="__uploadProgressUpdated">
 </file-sources>
 
 
