--- a/lists/upload-controls.html
+++ b/lists/upload-controls.html
@@ -55,13 +55,13 @@
 
 <div id="progress-container">
   <div class="secondary shared-single-line-truncate">
-    [[_state]]
+    [[state]]
   </div>
-  <paper-progress value="[[_progress]]"></paper-progress>
+  <paper-progress value="[[progress]]"></paper-progress>
 </div>
 
 <div id="control-buttons" 
-     hidden="[[_hideControlBtns]]">
+     hidden="[[_hideBtns]]">
   <paper-icon-button class="control-button"
                      hidden="[[_paused]]"
                      icon="app-icons:pause" 
