--- a/lists/roll-item.html
+++ b/lists/roll-item.html
@@ -44,8 +44,9 @@
 
 
   <upload-controls id="uploadControls"
-                   coll="[[coll]]"
-                   item="[[item]]">
+                   file="[[_file]]"
+                   progress="[[_progress]]"
+                   state="[[_state]]">
   </upload-controls>
 
 
