--- a/lists/camera-roll.html
+++ b/lists/camera-roll.html
@@ -110,10 +110,10 @@
   <roll-items id="items"
               all="[[_all]]"
               coll="[[coll]]"
-              files="[[files]]"
               hide-checkboxes="[[_hideCheckboxes]]"
               scale="[[_scale]]"
-              slot="content">
+              slot="content"
+              uploads="[[uploads]]">
   </roll-items>
 
 
