--- a/lists/paginated-roll-items.html
+++ b/lists/paginated-roll-items.html
@@ -15,10 +15,10 @@
           
   <roll-item class="item"
              coll="[[coll]]"
-             files="[[files]]"
              hide-checkbox="[[hideCheckboxes]]"
              item="[[item]]"
-             selected="[[all]]">
+             selected="[[all]]"
+             uploads="[[uploads]]">
   </roll-item>
 
 </template>
