--- a/lists/roll-item.html
+++ b/lists/roll-item.html
@@ -44,9 +44,9 @@
 
 
   <upload-controls id="uploadControls"
-                   file="[[_file]]"
                    progress="[[_progress]]"
-                   state="[[_state]]">
+                   state="[[_state]]"
+                   upload="[[_upload]]">
   </upload-controls>
 
 
