--- a/lists/roll-items.html
+++ b/lists/roll-items.html
@@ -30,10 +30,10 @@
   <paginated-roll-items class="item"
                         all="[[all]]"
                         coll="[[coll]]"
-                        files="[[files]]"
                         hide-checkboxes="[[hideCheckboxes]]"
                         index="[[index]]"
                         pagination="[[pagination]]"
+                        uploads="[[uploads]]"
                         on-new-pagination-doc="__newPaginationDoc">
   </paginated-roll-items>
 
