Fixed an issue with the wrong photos displaying when adding new files. This was caused by the fact that template repeaters reuse elements and lazy-image/lazy-video set their data asynchronously. They both previously used closures but now use instance properties to have access to the most current data, which may have changed during the asynchronous functions under the hood. Now pausing uploads for delete requested items. Now unsubscribing to all paginated subscriptions when the list overlay is closed.

--- a/lists/camera-roll.html
+++ b/lists/camera-roll.html
@@ -88,7 +88,7 @@
                     title="My Photos"
                     on-header-overlay-threshold-triggered-changed="__overlayTriggered"
                     on-overlay-exiting="__hideScale"
-                    on-reset="__resetScale">
+                    on-reset="__reset">
 
   <div class="background blur" 
        slot="header-background-slot">
@@ -111,6 +111,7 @@
               all="[[_all]]"
               coll="[[coll]]"
               hide-checkboxes="[[_hideCheckboxes]]"
+              opened="[[_opened]]"
               scale="[[_scale]]"
               slot="content"
               uploads="[[uploads]]">
