--- a/lists/roll-items.html
+++ b/lists/roll-items.html
@@ -32,6 +32,7 @@
                         coll="[[coll]]"
                         hide-checkboxes="[[hideCheckboxes]]"
                         index="[[index]]"
+                        opened="[[opened]]"
                         pagination="[[pagination]]"
                         uploads="[[uploads]]"
                         on-new-pagination-doc="__newPaginationDoc">
