--- a/lists/roll-item.html
+++ b/lists/roll-item.html
@@ -43,8 +43,7 @@
   <processing-icon item="[[item]]"></processing-icon>
 
 
-  <upload-controls id="uploadControls"
-                   progress="[[_progress]]"
+  <upload-controls progress="[[_progress]]"
                    state="[[_state]]"
                    upload="[[_upload]]">
   </upload-controls>
