Updated drag-drop-list dependency to work with nested slotted elements, which is needed for new paginated elements that are nested in a custom element with its css display set to contents. This update still does not address saving new indexes for drag and drop sorted elements so is still not stable.

--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -2,9 +2,9 @@
 <style include="app-shared-styles">
 
   :host {
-    display:  inline-block;
-    position: relative;
-    overflow: hidden;
+    display:  block;
+    position: relative;    
+    margin:   4px;
     --file-item-thumbnail-border-radius: 3px 3px 0px 0px; /* Another Safari fix. */
   }
 
@@ -18,7 +18,6 @@
     min-width:        120px;
     max-height:       240px;
     max-width:        204px;
-    margin:           4px;
     border-radius:    3px;
     overflow:         hidden;
     z-index:          1;
