Now saving new index values after drag-drop sort does not disrupt the drag-drop dom state. This version still does not address saving new items, deleting items, or working collaboratively.

--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -77,7 +77,7 @@
   }
 
   /*Reordering Testing Only*/
-  /*#test-div {
+  #test-div {
     position:         absolute;
     top:              8px;
     left:             8px;
@@ -86,7 +86,7 @@
     background-color: white;
     color:            rebeccapurple;
     z-index:          1;
-  }*/
+  }
 
 </style>
 
@@ -149,7 +149,7 @@
 
 
   <!-- Testing only -->
-       <!-- <div id="test-div">[[stateIndex]]</div> -->
+       <div id="test-div">[[stateIndex]]</div>
 
 
 </div>
