--- a/lists/paginated-file-items.html
+++ b/lists/paginated-file-items.html
@@ -8,7 +8,7 @@
 </style>
 
 
-<template is="dom-repeat" 
+<!-- <template is="dom-repeat" 
           items="[[_items]]"
           strip-whitespace
           on-dom-change="__domChanged">
@@ -16,6 +16,23 @@
   <file-item class="item"
              coll="[[coll]]"
              hide-checkbox="[[hideCheckboxes]]"
+             item="[[item]]"
+             selected="[[all]]"
+             uploads="[[uploads]]">
+  </file-item>  
+
+</template> -->
+
+
+<template is="dom-repeat" 
+          items="[[_correctedStateItems]]"
+          strip-whitespace
+          on-dom-change="__domChanged">
+
+  <file-item class="item"
+             coll="[[coll]]"
+             hide-checkbox="[[hideCheckboxes]]"
+             state-index="[[index]]"
              item="[[item]]"
              selected="[[all]]"
              uploads="[[uploads]]">
