Now properly updating paginated subscriptions when a startAfter doc changes. Now removing dom elements when an item is deleted from the db. This update does not include updating item indexes after a delete operation.

--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -82,7 +82,7 @@
     top:              8px;
     left:             8px;
     padding:          8px;
-    font-size:        20px;
+    /*font-size:        20px;*/
     background-color: white;
     color:            rebeccapurple;
     z-index:          1;
@@ -149,7 +149,10 @@
 
 
   <!-- Testing only -->
-       <div id="test-div">[[stateIndex]]</div>
+  <div id="test-div">
+    <div>S: [[stateIndex]]</div>
+    <div>Idx: [[item.index]]</div>
+  </div>
 
 
 </div>
