Now updating indexes after a delete operation. For db performance, only affected items are updated. Sparse indexes left from deleting items in the middle of the list are collapsed.  Sort operations now only save affected items as another db performance improvement.

--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -149,10 +149,10 @@
 
 
   <!-- Testing only -->
-  <div id="test-div">
+  <!-- <div id="test-div">
     <div>S: [[stateIndex]]</div>
     <div>Idx: [[item.index]]</div>
-  </div>
+  </div> -->
 
 
 </div>
