--- a/lists/file-items.html
+++ b/lists/file-items.html
@@ -28,34 +28,16 @@
     width:    100%;
   }
 
-  #dropZone {
-    display:          flex;
-    flex-direction:   column;
-    justify-content:  center;
-    align-items:      center;  
-    height:           144px;  
-    border:           4px dashed var(--paper-grey-600);
-    color:            var(--app-error-color);
-    background-color: var(--divider-color);
-  }
-
-  #delete-icon {
-    width:  40px;
-    height: 40px;
-  }
-
   *[hidden] {
     display: none;
-  }
-  
+  }  
 
 </style>
 
 
 <drag-drop-list disabled="[[!hideCheckboxes]]"
                 sortable=".item"
-                on-item-dropped="__handleDrop" 
-                on-sort-finish="__handleSort">
+                on-drag-drop-list-sorted="__handleSort">
 
   <template is="dom-repeat" 
             items="[[_items]]"
@@ -77,7 +59,7 @@
 
 
 <div id="icon-container"
-     hidden="[[__computeHideIcons(items)]]">
+     hidden="[[__computeHideIcons(_items)]]">
   <iron-icon icon="file-icons:touch-app"></iron-icon>
   <div id="sort-icons-container">
     <iron-icon icon="file-icons:low-priority"></iron-icon>
@@ -86,13 +68,4 @@
                icon="file-icons:block">
     </iron-icon>
   </div>
-</div>
-
-
-<div id="dropZone"
-     hidden="[[hideDropzone]]">
-  <iron-icon id="delete-icon" 
-             icon="file-icons:delete">
-  </iron-icon>
-  <div>Drop here to delete</div>
 </div>
