--- a/sources/list-icon-button.html
+++ b/sources/list-icon-button.html
@@ -126,11 +126,11 @@
 			<div id="count" 
 					 class="absolute">
 				<div class="count-label">
-					[[_count]]
+					[[count]]
 				</div>				
 				<div class="count-label"></div>
 				<div class="count-label">
-					[[_count]]
+					[[count]]
 				</div>
 			</div>
 		</div>
