Started work getting photo-carousel ready for the complex entry animation.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -62,7 +62,8 @@
 
 
 <photo-carousel id="carousel"
-                currentItem="[[_liveItem]]">
+                item="[[_liveItem]]"
+                list=[[list]]>
 </photo-carousel>
 
 
