--- a/lists/quick-options.html
+++ b/lists/quick-options.html
@@ -56,8 +56,6 @@
                    on-click="__closeBtnClicked">
 </paper-icon-button>
 
-<action-buttons item="[[item]]">
-  <paper-icon-button icon="file-icons:build"
-                     on-click="__editBtnClicked">
-  </paper-icon-button>
+<action-buttons edit-button
+                item="[[item]]">
 </action-buttons>
