--- a/shared/action-buttons.html
+++ b/shared/action-buttons.html
@@ -37,4 +37,7 @@
                    on-click="__shareBtnClicked">
 </paper-icon-button>
 
-<slot></slot>
+<paper-icon-button hidden="[[!editButton]]"
+                   icon="file-icons:build"
+                   on-click="__editBtnClicked">
+</paper-icon-button>
