Photo carousel now correctly paginates items that are before the starting element.  Cleaned up entry and exit animations. Header now sticky's the bottom toolbar so that the carousel can be a fullscreen element that blocks y scrolling. User can always scroll down the header no mater what position its in, the device's orientation or image size.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -62,6 +62,7 @@
 
 
 <photo-carousel id="carousel"
+                coll="[[coll]]"
                 item="[[_liveItem]]"
                 list=[[list]]>
 </photo-carousel>
